# Badger

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CNAME  GUI_GUIDE.md  MANIFEST.in  Notes.md  README.md  badger-latest-312.txt  badger-toml.txt  blog.html  index.html  mypy_deferred_errors.md  opensearch.xml  pyproject.toml  requirements.txt  search.html  setup.py  sitemap.xml  windows-dev-requirements.txt
.github/workflows/: ci.yml  docs.yml  documentation.yml  lint.yml  pypi_build_test.yml  pypi_release.yml  run-test.yml  tests.yml
assets/css/: styles.67758685.css  styles.ad3cd27a.css  styles.f0e4f4eb.css
assets/js/: 009f1e98.7dbe28ae.js  01a85c17.147b895e.js  01a85c17.9003e22e.js  01a85c17.92120c15.js  0473ccba.d8911fe2.js  0ae9fee1.9f07a4a0.js  0ae9fee1.ac053135.js  0ae9fee1.e2345700.js  0ae9fee1.e9047940.js  0ae9fee1.e99c400c.js  0e384e19.23cd0a74.js  0e384e19.264f097a.js  0e384e19.558a7331.js  0e384e19.ffc6a965.js  0f8e0a93.066d2eb4.js  0f8e0a93.22213d4e.js  0f8e0a93.69104d07.js  0f8e0a93.cf647733.js  0f8e0a93.fa3b9278.js  130.dc796eca.js  13db8233.a3d01944.js  13db8233.f01948aa.js  1426.efcc45d2.js  1628a5a1.a8397240.js  1628a5a1.b2a8301d.js  16568db6.0e82ec03.js  16568db6.6479a63b.js  16568db6.6bdbc6a4.js  1772.61942966.js  17896441.4068789b.js  17896441.6fe3d21c.js  17896441.fe3951ca.js  1809.e493a4e2.js  18283b77.181656e6.js  18283b77.342916aa.js  18283b77.4c8b4c94.js  1a4e3797.1b9ab440.js  1a4e3797.6ceb2c03.js  1a4e3797.76f6c0de.js  1be9a558.a28797ac.js  (+285 more)
blog/: archive.html  atom.xml  authors.html  rss.xml  tags.html  welcome.html
blog/tags/: badger.html  hello.html  slac.html
docker/on-demand/: Dockerfile  Dockerfile.smoketest  README.md  docker-compose.yml  smoketest.py  (+3 more)
docs/: intro.html
documentation/: README.md  algolia.json  docusaurus.config.js  package-lock.json  package.json  versions.json
env/: environment.yml  requirements.txt
scripts/: check_docstrings.py
src/: test_new_feature.py
(+378 files in other folders)
